# MLOPs--airflow-bentoML

./: .env.template  .gitignore  README-all.md  README.Run.md  README.md  README_migrate.md  bank.csv  docker-compose copy.yaml  docker-compose-copy.yaml  docker-compose.bento.yml  docker-compose.mlflow.yaml  docker-compose.monitoring.yml  docker-compose.yaml  driver_safe_param.json  drop.py  param.json  param.json.example  param_driver_dw.json  param_driver_safety_demo.json  param_gradient_boost.json  param_iot_sensors_demo.json  param_marketing_leads_demo.json  param_random_forest.json  parameter.py  service-bento-temp.py  test.py
bento_service/: README.md  bentofile.yaml  docker-compose.bento.yml  docker-compose.monitoring.yml  import_model.py  import_model_from_s3.py  model.version  prometheus.yml  requirements.txt  service.py  workflow.yaml
config/: airflow.cfg
containers/ml_pipeline_worker/: Dockerfile  README.md  pyproject.toml
containers/ml_pipeline_worker/src/pipeline_worker/: __init__.py  artifacts.py  config_validation.py  datasets.py  hpo.py  ingestion.py  preprocessing.py  profiling.py  storage.py  train_utils.py  validation.py
containers/ml_pipeline_worker/src/pipeline_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
containers/ml_pipeline_worker/src/pipeline_worker/cli/: __init__.py  clean_data.py  ingest_data.py  profile_data.py  save_results.py  train_model.py  tune_model.py  validate_data.py  visualize_data.py
dags/: deploy_bentoml.py  dynamic.py  dynamic_best_params.py  dynamic_ecs.py  dynamic_ingest.py  pipeline_common.py  (+2 more)
(+85 files in other folders)
